--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,35 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.leshik.moviedb.DetailActivity$DetailFragment">
+    android:layout_height="match_parent">
 
-    <TextView android:id="@+id/detail_title"
-        android:layout_height="wrap_content"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        tools:text="Hello"
-        android:paddingStart="@dimen/detail_left_margin"
-        android:paddingEnd="@dimen/detail_right_margin"
-        android:paddingLeft="@dimen/detail_left_margin"
-        android:paddingRight="@dimen/detail_right_margin"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:paddingBottom="@dimen/detail_title_vertical_margin"
-        android:paddingTop="@dimen/detail_title_vertical_margin"
-        android:background="@color/colorDetailTitleBackground"
-        android:textColor="@color/colorDetailTitleForeground" />
-
-    <ImageView
-        android:id="@+id/poster_image"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/detail_title"
-        android:layout_alignParentLeft="true"
-        android:paddingLeft="@dimen/detail_left_margin"
-        android:paddingTop="@dimen/detail_interviews_padding" />
+        tools:context="com.example.leshik.moviedb.DetailActivity$DetailFragment">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/detail_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorDetailTitleBackground"
+            android:paddingBottom="@dimen/detail_title_vertical_margin"
+            android:paddingEnd="@dimen/detail_right_margin"
+            android:paddingLeft="@dimen/detail_left_margin"
+            android:paddingRight="@dimen/detail_right_margin"
+            android:paddingStart="@dimen/detail_left_margin"
+            android:paddingTop="@dimen/detail_title_vertical_margin"
+            android:textColor="@color/colorDetailTitleForeground"
+            android:textSize="24sp"
+            tools:text="Original title" />
+
+        <ImageView
+            android:id="@+id/poster_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/detail_title"
+            android:layout_toEndOf="@+id/detail_title"
+            android:layout_toRightOf="@+id/detail_title"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:paddingLeft="@dimen/detail_left_margin"
+            android:paddingTop="@dimen/detail_interviews_padding"
+            app:srcCompat="@mipmap/interstellar" />
+
+        <TextView
+            android:id="@+id/detail_released"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/detail_title"
+            android:layout_toRightOf="@+id/poster_image"
+            android:paddingEnd="@dimen/detail_right_margin"
+            android:paddingLeft="@dimen/detail_left_margin"
+            android:paddingRight="@dimen/detail_left_margin"
+            android:paddingStart="@dimen/detail_left_margin"
+            android:paddingTop="@dimen/detail_interviews_padding"
+            android:text="Released"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/detail_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/detail_released"
+            android:layout_toRightOf="@+id/poster_image"
+            android:paddingEnd="@dimen/detail_right_margin"
+            android:paddingLeft="@dimen/detail_left_margin"
+            android:paddingRight="@dimen/detail_left_margin"
+            android:paddingStart="@dimen/detail_left_margin"
+            android:paddingTop="@dimen/detail_interviews_padding"
+            android:text="8.1/10"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/detail_overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/poster_image"
+            android:paddingBottom="@dimen/detail_title_vertical_margin"
+            android:paddingEnd="@dimen/detail_right_margin"
+            android:paddingLeft="@dimen/detail_left_margin"
+            android:paddingRight="@dimen/detail_right_margin"
+            android:paddingStart="@dimen/detail_left_margin"
+            android:paddingTop="@dimen/detail_title_vertical_margin"
+            android:text="Overview text"
+            android:textColor="@color/colorOverviewForeground" />
+
+    </RelativeLayout>
+</ScrollView>
