--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#353535</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorDetailTitleBackground">#5bd0c8</color>
+    <color name="colorDetailTitleBackground">#00b4b4</color>
     <color name="colorDetailTitleForeground">#ffffff</color>
+    <color name="colorOverviewForeground">#404040</color>
 </resources>
