--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,20 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <!-- Main block, includes 3 section: title (text), image+info (linear), overview (text) -->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context="com.example.leshik.moviedb.DetailActivity$DetailFragment">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <!-- Title -->
         <TextView
             android:id="@+id/detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:background="@color/colorDetailTitleBackground"
             android:paddingBottom="@dimen/detail_title_vertical_margin"
             android:paddingEnd="@dimen/detail_right_margin"
@@ -30,61 +26,65 @@
             android:textSize="24sp"
             tools:text="Original title" />
 
-        <ImageView
-            android:id="@+id/poster_image"
-            android:layout_width="wrap_content"
+        <!-- Image, rlease date, rating -->
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/detail_title"
-            android:layout_toEndOf="@+id/detail_title"
-            android:layout_toRightOf="@+id/detail_title"
-            android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingTop="@dimen/detail_interviews_padding"
-            app:srcCompat="@mipmap/interstellar" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/detail_released"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/detail_title"
-            android:layout_toRightOf="@+id/poster_image"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin"
-            android:paddingTop="@dimen/detail_interviews_padding"
-            android:text="Released"
-            android:textSize="18sp" />
+            <!-- poster -->
+            <ImageView
+                android:id="@+id/poster_image"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:cropToPadding="true"
+                android:paddingLeft="@dimen/detail_left_margin"
+                android:paddingTop="@dimen/detail_interviews_padding"
+                app:srcCompat="@mipmap/interstellar" />
 
-        <TextView
-            android:id="@+id/detail_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/detail_released"
-            android:layout_toRightOf="@+id/poster_image"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin"
-            android:paddingTop="@dimen/detail_interviews_padding"
-            android:text="8.1/10"
-            android:textSize="14sp" />
+            <!-- text info (release date, rating) -->
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <!-- release date -->
+                <TextView
+                    android:id="@+id/detail_released"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/detail_right_margin"
+                    android:paddingLeft="@dimen/detail_left_margin"
+                    android:paddingRight="@dimen/detail_left_margin"
+                    android:paddingStart="@dimen/detail_left_margin"
+                    android:paddingTop="@dimen/detail_interviews_padding"
+                    android:text="Released"
+                    android:textSize="18sp" />
+                <!-- rating -->
+                <TextView
+                    android:id="@+id/detail_rating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/detail_right_margin"
+                    android:paddingLeft="@dimen/detail_left_margin"
+                    android:paddingRight="@dimen/detail_left_margin"
+                    android:paddingStart="@dimen/detail_left_margin"
+                    android:paddingTop="@dimen/detail_interviews_padding"
+                    android:text="8.1/10"
+                    android:textSize="14sp" />
 
+                <!-- end of etxt info block -->
+            </LinearLayout>
+            <!-- end of middle block (poster + info) -->
+        </LinearLayout>
+
+        <!-- Overview -->
         <TextView
             android:id="@+id/detail_overview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/poster_image"
             android:paddingBottom="@dimen/detail_title_vertical_margin"
             android:paddingEnd="@dimen/detail_right_margin"
             android:paddingLeft="@dimen/detail_left_margin"
@@ -93,6 +93,7 @@
             android:paddingTop="@dimen/detail_title_vertical_margin"
             android:text="Overview text"
             android:textColor="@color/colorOverviewForeground" />
+        <!-- End of main block -->
+    </LinearLayout>
 
-    </RelativeLayout>
 </ScrollView>
