--- a/app/src/main/res/layout/fragment_main_recycleview.xml
+++ b/app/src/main/res/layout/fragment_main_recycleview.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movies_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical" />
+    android:scrollbars="vertical"
+    android:columnWidth="150dp"
+    android:horizontalSpacing="0dp"
+    android:stretchMode="columnWidth"
+    android:verticalSpacing="0dp"
+    tools:context=".MovieListFragment" />
