Fix column width in the layouts

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,7 @@
 
         <ImageView
             android:id="@+id/poster_image"
-            android:layout_width="185dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop" />
     </RelativeLayout>
