--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -41,7 +41,7 @@
                 android:cropToPadding="true"
                 android:paddingLeft="@dimen/detail_left_margin"
                 android:paddingTop="@dimen/detail_interviews_padding"
-                app:srcCompat="@mipmap/interstellar" />
+                android:transitionName="@string/poster_image" />
 
             <!-- text info (release date, rating) -->
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
