--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,8 +14,10 @@
             android:id="@+id/poster_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:transitionName="@string/poster_image"
             android:scaleType="centerCrop"
-            android:transitionName="@string/poster_image" />
+            android:adjustViewBounds="true"
+            android:cropToPadding="false" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
