--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,9 +4,9 @@
     android:id="@+id/detail_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.leshik.moviedb.DetailActivity"
-    tools:ignore="MergeRootFrame"
-    android:orientation="vertical">
+    tools:ignore="MergeRootFrame">
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,9 +22,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/detail_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.leshik.moviedb.DetailActivity"
-        tools:ignore="MergeRootFrame">
+        android:layout_height="match_parent">
 
     </FrameLayout>
 </LinearLayout>
