Add strings for tabs titles

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,10 @@
         <item>@string/pref_sortorder_popular</item>
         <item>@string/pref_sortorder_rating</item>
     </string-array>
+
+    <string-array name="main_tab_names">
+        <item>@string/popular_tab_title</item>
+        <item>@string/toprated_tab_title</item>
+        <item>@string/favorites_tab_title</item>
+    </string-array>
 </resources>
