--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,7 +4,8 @@
     android:id="@+id/poster_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="0dp">
+    card_view:cardCornerRadius="0dp"
+    card_view:cardPreventCornerOverlap="false">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -14,10 +15,10 @@
             android:id="@+id/poster_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:transitionName="@string/poster_image"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:cropToPadding="false" />
+            android:cropToPadding="false"
+            android:scaleType="centerCrop"
+            android:transitionName="@string/poster_image" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
