Add runtime to detail view 1) add runtime column into movies table 2) add update time into movies table 3) add runtime field into details fragment

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -60,6 +60,19 @@
                     android:paddingTop="@dimen/detail_interviews_padding"
                     android:text="Released"
                     android:textSize="18sp" />
+                <!-- runtime -->
+                <TextView
+                    android:id="@+id/detail_runtime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/detail_right_margin"
+                    android:paddingLeft="@dimen/detail_left_margin"
+                    android:paddingRight="@dimen/detail_left_margin"
+                    android:paddingStart="@dimen/detail_left_margin"
+                    android:paddingTop="@dimen/detail_interviews_padding"
+                    android:text="120 min"
+                    android:textSize="18sp"
+                    android:textStyle="normal|italic" />
                 <!-- rating -->
                 <TextView
                     android:id="@+id/detail_rating"
