--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -70,7 +70,7 @@
                     android:paddingRight="@dimen/detail_left_margin"
                     android:paddingStart="@dimen/detail_left_margin"
                     android:paddingTop="@dimen/detail_interviews_padding"
-                    android:text="120 min"
+                    android:text="-"
                     android:textSize="18sp"
                     android:textStyle="normal|italic" />
                 <!-- rating -->
@@ -103,6 +103,69 @@
             android:paddingStart="@dimen/detail_left_margin"
             android:paddingTop="@dimen/detail_title_vertical_margin"
             android:text="Overview text" />
+
+        <!-- List of trailers -->
+        <LinearLayout
+            android:id="@+id/videos_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/videos_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:labelFor="@+id/videos_list"
+                android:paddingEnd="@dimen/detail_right_margin"
+                android:paddingLeft="@dimen/detail_left_margin"
+                android:paddingRight="@dimen/detail_left_margin"
+                android:paddingStart="@dimen/detail_left_margin"
+                android:paddingTop="@dimen/detail_interviews_padding"
+                android:text="@string/videos_list_title"
+                android:textSize="18sp" />
+
+            <ListView
+                android:id="@+id/videos_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/detail_right_margin"
+                android:paddingLeft="@dimen/detail_left_margin"
+                android:paddingRight="@dimen/detail_left_margin"
+                android:paddingStart="@dimen/detail_left_margin" />
+
+        </LinearLayout>
+
+        <!-- List of reviews -->
+        <LinearLayout
+            android:id="@+id/reviews_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/reviews_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:labelFor="@+id/reviews_list"
+                android:paddingEnd="@dimen/detail_right_margin"
+                android:paddingLeft="@dimen/detail_left_margin"
+                android:paddingRight="@dimen/detail_left_margin"
+                android:paddingStart="@dimen/detail_left_margin"
+                android:paddingTop="@dimen/detail_interviews_padding"
+                android:text="@string/reviews_list_title"
+                android:textSize="18sp" />
+
+            <ListView
+                android:id="@+id/reviews_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/detail_right_margin"
+                android:paddingLeft="@dimen/detail_left_margin"
+                android:paddingRight="@dimen/detail_left_margin"
+                android:paddingStart="@dimen/detail_left_margin" />
+
+        </LinearLayout>
+
         <!-- End of main block -->
     </LinearLayout>
 
