--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,7 +2,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fadingEdgeLength="0dp"
+    android:fillViewport="true"
+    android:overScrollMode="never"
+    android:scrollbars="none">
 
     <!-- Main block, includes 3 section: title (text), image+info (linear), overview (text) -->
     <!-- May by in future I will bring Title TextView out of scrolling area -->
@@ -124,7 +128,7 @@
                 android:text="@string/videos_list_title"
                 android:textSize="18sp" />
 
-            <ListView
+            <com.example.leshik.moviedb.NonScrollListView
                 android:id="@+id/videos_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -155,7 +159,7 @@
                 android:text="@string/reviews_list_title"
                 android:textSize="18sp" />
 
-            <ListView
+            <com.example.leshik.moviedb.NonScrollListView
                 android:id="@+id/reviews_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
