--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorDetailTitleBackgroundLight">#00b4b4</color>
     <color name="colorDetailTitleForeground">#ffffff</color>
     <color name="colorOverviewForeground">#404040</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
