--- a/app/src/main/res/layout/fragment_full_poster.xml
+++ b/app/src/main/res/layout/fragment_full_poster.xml
@@ -5,12 +5,10 @@
     android:gravity="center"
     tools:context="com.example.leshik.moviedb.FullPosterFragment">
 
-    <ImageView
+    <com.example.leshik.moviedb.TouchImageView
         android:id="@+id/full_poster_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:transitionName="@string/poster_image" />
 
 </FrameLayout>
