--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,6 +4,10 @@
     <style name="AppThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
+        <!-- specify enter and exit transitions -->
+        <item name="android:windowEnterTransition">@transition/inter_activity_transform</item>
+        <item name="android:windowExitTransition">@transition/inter_activity_transform</item>
+
         <!-- specify shared element transitions -->
         <item name="android:windowSharedElementEnterTransition">
             @transition/change_image_transform
@@ -17,6 +21,10 @@
     <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
         <!-- enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
+        <!-- specify enter and exit transitions -->
+        <item name="android:windowEnterTransition">@transition/inter_activity_transform</item>
+        <item name="android:windowExitTransition">@transition/inter_activity_transform</item>
+
         <!-- specify shared element transitions -->
         <item name="android:windowSharedElementEnterTransition">
             @transition/change_image_transform
