Fix issue with permanently screen on in poster view activity

--- a/app/src/main/res/layout/activity_full_poster.xml
+++ b/app/src/main/res/layout/activity_full_poster.xml
@@ -12,7 +12,6 @@
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true" />
+        android:gravity="center" />
 
 </FrameLayout>
