--- a/app/src/main/res/menu/main_fragment.xml
+++ b/app/src/main/res/menu/main_fragment.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="@string/action_refresh"
+        android:title="@string/action_refresh_list"
         app:showAsAction="never" />
 </menu>
