--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorOverviewForeground">#404040</color>
 
     <color name="black_overlay">#ff000000</color>
+    <color name="grey_overlay">#80000000</color>
 </resources>
