Add contrast background for title and video/reviews headers

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/detail_fragment_scroll_view"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/detail_fragment_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fadingEdgeLength="0dp"
@@ -25,6 +25,8 @@
                 android:id="@+id/detail_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorTitleBackground"
+                android:elevation="4dp"
                 android:paddingBottom="@dimen/detail_title_vertical_margin"
                 android:paddingEnd="@dimen/detail_right_margin"
                 android:paddingLeft="@dimen/detail_left_margin"
@@ -125,7 +127,11 @@
                     android:id="@+id/videos_list_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorTitleBackground"
+                    android:elevation="4dp"
+                    android:gravity="center_vertical"
                     android:labelFor="@+id/videos_list"
+                    android:paddingBottom="@dimen/detail_interviews_padding"
                     android:paddingEnd="@dimen/detail_right_margin"
                     android:paddingLeft="@dimen/detail_left_margin"
                     android:paddingRight="@dimen/detail_left_margin"
@@ -157,7 +163,11 @@
                     android:id="@+id/reviews_list_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorTitleBackground"
+                    android:elevation="4dp"
+                    android:gravity="center_vertical"
                     android:labelFor="@+id/reviews_list"
+                    android:paddingBottom="@dimen/detail_interviews_padding"
                     android:paddingEnd="@dimen/detail_right_margin"
                     android:paddingLeft="@dimen/detail_left_margin"
                     android:paddingRight="@dimen/detail_left_margin"
