--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
 
     <color name="black_overlay">#ff000000</color>
     <color name="grey_overlay">#80000000</color>
+    <color name="colorDividerDark">#ffffffff</color>
+    <color name="colorDividerLight">#ff000000</color>
+    <color name="colorDivider">#ff808080</color>
+
+    <color name="colorTitleBackground">#40808080</color>
 </resources>
