Refactoring FullPoster activity/fragment to MVVM

--- a/app/src/main/res/layout/activity_full_poster.xml
+++ b/app/src/main/res/layout/activity_full_poster.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black_overlay"
     android:orientation="vertical"
-    tools:context="com.example.leshik.moviedb.FullPosterActivity"
+    tools:context=".ui.poster.FullPosterActivity"
     tools:ignore="MergeRootFrame">
 
     <FrameLayout
