--- a/app/src/main/res/layout/videos_and_reviews.xml
+++ b/app/src/main/res/layout/videos_and_reviews.xml
@@ -16,28 +16,15 @@
             android:id="@+id/videos_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorTitleBackground"
-            android:elevation="4dp"
-            android:gravity="center_vertical"
             android:labelFor="@+id/videos_list"
-            android:paddingBottom="@dimen/detail_interviews_padding"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin"
-            android:paddingTop="@dimen/detail_interviews_padding"
             android:text="@string/videos_list_title"
-            android:textSize="18sp"
-            android:textStyle="normal|bold|italic" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@android:color/white" />
 
         <TableLayout
             android:id="@+id/videos_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -53,28 +40,17 @@
             android:id="@+id/reviews_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorTitleBackground"
-            android:elevation="4dp"
-            android:gravity="center_vertical"
             android:labelFor="@+id/reviews_list"
-            android:paddingBottom="@dimen/detail_interviews_padding"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin"
             android:paddingTop="@dimen/detail_interviews_padding"
             android:text="@string/reviews_list_title"
-            android:textSize="18sp"
-            android:textStyle="normal|bold|italic" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@android:color/white" />
 
         <TableLayout
             android:id="@+id/reviews_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/detail_right_margin"
-            android:paddingLeft="@dimen/detail_left_margin"
-            android:paddingRight="@dimen/detail_left_margin"
-            android:paddingStart="@dimen/detail_left_margin" />
+            android:clipChildren="false" />
 
     </LinearLayout>
 
