--- a/app/src/main/res/layout/videos_list_item.xml
+++ b/app/src/main/res/layout/videos_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/videos_list_item_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:id="@+id/videos_list_item_frame"
     android:paddingBottom="@dimen/detail_video_list_items_padding"
     android:paddingTop="@dimen/detail_video_list_items_padding">
 
@@ -20,6 +20,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:text="Trailer" />
+        android:background="?android:attr/selectableItemBackground"
+        android:fontFamily="sans-serif-light"
+        android:lineSpacingMultiplier="1.2"
+        android:text="Trailer"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
