--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -30,7 +30,6 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:cropToPadding="true"
-                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:transitionName="@string/poster_image"
                 app:layout_collapseMode="parallax" />
@@ -148,7 +147,7 @@
                 layout="@layout/videos_and_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp" />
+                android:layout_margin="@dimen/default_layout_margin" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
