--- a/app/src/main/res/layout/videos_and_reviews.xml
+++ b/app/src/main/res/layout/videos_and_reviews.xml
@@ -32,7 +32,9 @@
                 android:id="@+id/videos_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="horizontal">
+
+            </LinearLayout>
         </HorizontalScrollView>
 
     </LinearLayout>
