--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:gravity="center_vertical"
-    android:paddingRight="16dp"
-    android:paddingLeft="16dp"
+    android:paddingRight="@dimen/padding_spinner_right"
+    android:paddingLeft="@dimen/padding_spinner_left"
     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
