--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,6 +6,6 @@
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:ellipsize="marquee"
     android:gravity="center_vertical"
-    android:paddingRight="16dp"
-    android:paddingLeft="16dp"
+    android:paddingRight="@dimen/padding_spinner_right"
+    android:paddingLeft="@dimen/padding_spinner_left"
     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
